--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.17.3",
     "axios": "^1.5.0",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-typewriter-effect": "^1.1.0",
